:bug: Selection region was misaligned

--- a/styles/base.less
+++ b/styles/base.less
@@ -7,7 +7,9 @@
         color: @color-white_dark;
         line-height: 1.5em;
 
-        .selection .region { background: rgba(255, 255, 255, @opacity-highlight); }
+        .selection .region {
+            background: rgba(255, 255, 255, @opacity-highlight);
+            margin-left: 4px; }
         .underlayer { background: @image-noise; }
         .wrap-guide { background: @color-charcoal_light; }
 
